--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-bootstrap",
-  "version": "2.1.2",
+  "version": "2.1.2-3",
   "description": "Angular powered Bootstrap",
   "keywords": [
     "angular",
